<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="17.7dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:id="@+id/setting_color_text"
        android:textSize="23.3sp"
        android:textColor="#FFFFFF"
        android:text="@string/color_question_text"/>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/setting_color_text"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:id="@+id/setting_color_group">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_color_group1"
            android:layout_marginLeft="-0dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setting_color_purple"
                android:text="@string/color_purple"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setting_color_blue"
                android:text="@string/color_blue"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_marginTop="50dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setting_color_pink"
                android:text="@string/color_pink"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_marginTop="50dp"/>
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_color_group2"
            android:layout_marginLeft="40dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setting_color_black"
                android:text="@string/color_black"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setting_color_sky"
                android:text="@string/color_sky"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_marginTop="50dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setting_color_red"
                android:text="@string/color_red"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_marginTop="50dp"/>
        </RadioGroup>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_color_group3"
            android:layout_marginLeft="40dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setting_color_green"
                android:text="@string/color_green"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setting_color_yelow"
                android:text="@string/color_yellow"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_marginTop="50dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setting_color_white"
                android:text="@string/color_white"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_marginTop="50dp"/>
        </RadioGroup>
    </RadioGroup>

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="139.3dp"
        android:layout_marginBottom="55.3dp"
        android:layout_marginRight="139.3dp"
        android:id="@+id/setting_color_button"
        android:textAlignment="center"
        android:textSize="16sp" />

</RelativeLayout>