<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_blood">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="17.7dp"
        android:id="@+id/setting_blood_text"
        android:textColor="#000000"
        android:text="@string/blood_question_text"
        android:textSize="23.3sp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_blood_text"
        android:orientation="vertical"
        android:id="@+id/setting_blood_group"
        android:layout_marginLeft="221dp"
        android:layout_marginTop="144.7dp"
        >

        <RadioButton
            android:id="@+id/setting_blood_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_A"
            android:textSize="20sp"
            android:layout_marginBottom="25dp"
            android:button="@null"
            android:textColor="@drawable/radio_text"
            android:drawableLeft="@drawable/radio_button"
            android:drawablePadding="9.4dp"/>

        <RadioButton
            android:id="@+id/setting_blood_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_B"
            android:textSize="20sp"
            android:layout_marginBottom="25dp"
            android:button="@null"
            android:textColor="@drawable/radio_text"
            android:drawableLeft="@drawable/radio_button"
            android:drawablePadding="9.4dp"/>

        <RadioButton
            android:id="@+id/setting_blood_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_O"
            android:textSize="20sp"
            android:layout_marginBottom="25dp"
            android:button="@null"
            android:textColor="@drawable/radio_text"
            android:drawableLeft="@drawable/radio_button"
            android:drawablePadding="9.4dp"/>

        <RadioButton
            android:id="@+id/setting_blood_ab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_AB"
            android:textSize="20sp"
            android:button="@null"
            android:textColor="@drawable/radio_text"
            android:drawableLeft="@drawable/radio_button"
            android:drawablePadding="9.4dp"/>
    </RadioGroup>

    <Button
        android:text="@string/next"
        android:alpha="0.6"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55.3dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/setting_blood_button"
        android:textAlignment="center"
        android:textSize="16sp"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_black"
        android:background="@android:color/transparent"
        android:onClick="backButtonClick"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17.7dp"
        android:id="@+id/back_button" />
</RelativeLayout>